# swarmreport

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  update-deps.yml
proto/: swarmreport.proto
src/: main_sentinel.rs  reporter.rs  sentinel.rs
src/report/: client.rs  mod.rs  system.rs
src/sentinel/: grpc_server.rs  mod.rs  tui.rs  types.rs  web.rs
static/: dashboard.html
