[package]
name = "swarmreport"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sentinel"
path = "src/sentinel.rs"

[[bin]]
name = "reporter"
path = "src/reporter.rs"

[dependencies]
local-ip-address = "0.6.5"
prost = "0.13"
sysinfo = "0.35.2"
tokio = { version = "1", features = ["full"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
